// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Chat {
  ChatId integer PK
  ListingId integer [null]
}

Table Message {
  MessageId int PK
  ChatId integer [not null]
  Message varchar [NOT NULL]
  CreatedAt datetime [not null]
  FromAccountId int [not null]
}

Table ChatMember {
  ChatId integer PK
  AccountId integer [not null]
}

Ref: Chat.ChatId < ChatMember.ChatId // many-to-one
Ref: Chat.ChatId < Message.ChatId